Adding outgoing webhook on execute

--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -11,13 +11,22 @@ resources:
     configuration:
       sourceArtifactory: art
       buildName: SampleApp
-      buildNumber: 1          
-pipelines:  
+      buildNumber: 1
+  - name: My_OutHook_formurl_Resource
+    type: OutgoingWebhook
+    configuration:
+      webhookName: MyOutgoingWebhookIntegration
+      path: https://webhook.site/0b6f1693-9de4-45f2-87d6-3eedd93cf1e4
+      headers:
+        content-type: application/x-www-form-urlencoded
+
+pipelines:
   - name: basic_pipeline
     configuration:
       environmentVariables:
         readOnly:
-          my_env_var: "hello"  
+          my_env_var: "hello"
+
     steps:
       - name: step_1
         type: Bash
@@ -25,10 +34,12 @@ pipelines:
           inputResources:
             - name: myGitRepo
           outputResources:
-            - name: myBuildInfo             
+            - name: myBuildInfo
         execution:
           onExecute:
             - echo $my_env_var
+            - formUrlEncodedPayload="foo=bar&runNumber=$run_number&stepName=$step_name"
+            - set_payload My_OutHook_formurl_Resource "$formUrlEncodedPayload"
             - if [ -z $app_version ]; then add_pipeline_variables app_version=1.0.0; else app_version=$(bump_semver $app_version minor); fi
             - write_output myBuildInfo "buildNumber=$app_version"
             - add_run_variables run_var="hello"
@@ -36,7 +47,7 @@ pipelines:
         type: Bash
         configuration:
           inputResources:
-            - name: myBuildInfo            
+            - name: myBuildInfo
           runtime:
             type: image
             image:
@@ -45,7 +56,7 @@ pipelines:
                 versions: ['11']
         execution:
           onExecute:
-            - echo $run_var  
+            - echo $run_var
             - echo $res_myBuildInfo_buildNumber
       - name: step_3
         type: Bash
@@ -70,9 +81,9 @@ pipelines:
         configuration:
           inputSteps:
             - name: step_3
-            - name: step_4  
+            - name: step_4
           integrations:
-            - name: my_github            
+            - name: my_github
         execution:
           onExecute:
             - 'curl -H "Authorization: token ${int_my_github_token}" ${int_my_github_url}/rate_limit'
