--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -12,7 +12,7 @@ resources:
       sourceArtifactory: art
       buildName: SampleApp
       buildNumber: 1
-  - name: My_OutHook_formurl_Resource
+  - name: myOWH
     type: OutgoingWebhook
     configuration:
       webhookName: MyOutgoingWebhookIntegration
@@ -40,7 +40,7 @@ pipelines:
           onExecute:
             - echo $my_env_var
             - formUrlEncodedPayload="foo=bar&runNumber=$run_number&stepName=$step_name"
-            - set_payload My_OutHook_formurl_Resource "$formUrlEncodedPayload"
+            - set_payload myOWH "$formUrlEncodedPayload"
             - if [ -z $app_version ]; then add_pipeline_variables app_version=1.0.0; else app_version=$(bump_semver $app_version minor); fi
             - write_output myBuildInfo "buildNumber=$app_version"
             - add_run_variables run_var="hello"
