--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -20,7 +20,6 @@ resources:
       headers:
         content-type: application/x-www-form-urlencoded
 
-
 pipelines:
   - name: basic_pipeline
     configuration:
@@ -34,6 +33,7 @@ pipelines:
         configuration:
           inputResources:
             - name: myGitRepo
+            - name: myOWH
           outputResources:
             - name: myBuildInfo
         execution:
