--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -19,7 +19,11 @@ resources:
       path: /url
       headers:
         content-type: application/x-www-form-urlencoded
-
+  - name: myIWH
+    type: IncomingWebhook
+    configuration:
+      webhookName: MyIncomingWebhookIntegration
+      
 pipelines:
   - name: basic_pipeline
     configuration:
@@ -33,6 +37,7 @@ pipelines:
         configuration:
           inputResources:
             - name: myGitRepo
+            - name: myIWH
           outputResources:
             - name: myBuildInfo
         execution:
@@ -41,6 +46,8 @@ pipelines:
             - if [ -z $app_version ]; then add_pipeline_variables app_version=1.0.0; else app_version=$(bump_semver $app_version minor); fi
             - write_output myBuildInfo "buildNumber=$app_version"
             - add_run_variables run_var="hello"
+            - echo "$res_myIWH_payload" | jq '.' > payload.json
+            - read_json payload.json "LESSER_SECRET_FORMULA"
       - name: step_2
         type: Bash
         configuration:
