--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -47,7 +47,34 @@ pipelines:
             - write_output myBuildInfo "buildNumber=$app_version"
             - add_run_variables run_var="hello"
             - echo "$res_myIWH_payload" | jq '.' > payload.json
-            - read_json payload.json "LESSER_SECRET_FORMULA"
+            - add_run_variables project=read_json payload.json "project"
+            - add_run_variables stage=read_json payload.json "stage"
+            - add_run_variables service=read_json payload.json "service"
+            - add_run_variables shkeptncontext=read_json payload.json "shkeptncontext"
+            - add_run_variables id=read_json payload.json "id"
+            - add_run_variables json=$(cat <<-END
+                                          {
+                                            "data": {
+                                              "project":"$project",
+                                              "stage":"$stage",
+                                              "service":"$service",
+                                              "status": "succeeded",
+                                              "result": "pass",
+                                              "mytask-interactive": {
+                                                "link": "https://a-back-link-to-result",
+                                                "more": "even more data"
+                                              }
+                                            },
+                                            "source": "cas-quickstart",
+                                            "specversion": "1.0",
+                                            "type": "sh.keptn.event.mytask-interactive.finished",
+                                            "shkeptncontext": "$shkeptncontext",
+                                            "triggeredid": "$id"
+                                          }
+                                      END
+                                      )
+            
+            
       - name: step_2
         type: Bash
         configuration:
@@ -93,6 +120,7 @@ pipelines:
             - name: my_github
         execution:
           onExecute:
-            - 'curl -H "Authorization: token ${int_my_github_token}" ${int_my_github_url}/rate_limit'
+            - 'curl -H "Authorization: token ${int_my_github_token}" ${int_my_github_url}/rate_limit' 
+            curl -X POST "https://pye55831.cloudautomation.live.dynatrace.com/api/v1/event" -H "accept: application/json" -H "x-token: OUvGHNDLQm4LVxiawg1EvSlbDPT98MBbztBpLHZ4LPXzR" -H "Content-Type: application/json" -d "$json"
             - formUrlEncodedPayload="foo=bar&runNumber=$run_number&stepName=$step_name"
             - set_payload myOWH "$formUrlEncodedPayload"
