--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -54,7 +54,7 @@ pipelines:
             - add_run_variables shkeptncontext=read_json payload.json "shkeptncontext"
             - add_run_variables id=read_json payload.json "id"
             - add_run_variables json=$(cat <<-END {"data":{"project":"$project","stage":"$stage","service":"$service","status":"succeeded","result":"pass","mytask-interactive":{"link":"https://a-back-link-to-result","more":"even more data"}},"source":"cas-quickstart","specversion":"1.0","type":"sh.keptn.event.mytask-interactive.finished","shkeptncontext":"$shkeptncontext","triggeredid":"$id"}END) 
-            
+            - echo $json
       - name: step_2
         type: Bash
         configuration:
