--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -49,8 +49,8 @@ pipelines:
             - add_run_variables run_var="hello"
             - echo "$res_myIWH_payload" | jq '.' > payload.json
             - echo "$res_myIWH_payload"
-            - echo $(read_json payload.json "project")
-            - add_run_variables project= (read_json payload.json "project")
+            - echo $(read_json $res_myIWH_payload "project")
+            - add_run_variables project= (read_json $res_myIWH_payload "project")
             - echo $project
             - add_run_variables stage=read_json payload.json "stage"
             - echo $stage
