--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -49,7 +49,7 @@ pipelines:
                   --arg bn $(read_json payload.json "project") \
                   --arg on $(read_json payload.json "stage") \
                   --arg tl $(read_json payload.json "service") \
-                  '{bucketname: $bn, objectname: $on, targetlocation: $tl}' )
+                  {bucketname: $bn, objectname: $on, targetlocation: $tl} )
             - echo $JSON_STRING
             - add_run_variables my_payload=$(cat << {"data":{"project":"$project","stage":"$stage","service":"$service","status":"succeeded","result":"pass"},"source":"cas-quickstart","specversion":"1.0","type":"sh.keptn.event.mytask-interactive.finished","shkeptncontext":"$shkeptncontext","triggeredid":"$id"})
             - echo $my_payload
