--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -27,8 +27,8 @@ pipelines:
             - add_run_variables stage=$(read_json payload.json "stage")
             - add_run_variables service=$(read_json payload.json "service")
             - add_run_variables shkeptncontext=$(read_json payload.json "shkeptncontext")
-            - add_run_variables id=$(read_json payload.json "id")
-            - JSON_STRING=$(jq -n --arg pr $project --arg st $stage --arg sv $"service" --arg sh $shkeptncontext --arg id '{bucketname:$pr, objectname:$st, targetlocation:$id}')
+            - add_run_variables idx=$(read_json payload.json "id")
+            - JSON_STRING=$(jq -n --arg pr $project --arg st $stage --arg sv $"service" --arg sh $shkeptncontext) '{bucketname:$pr, objectname:$st, targetlocation:$sh}')
             - echo $JSON_STRING
             - add_run_variables my_payload=$(cat << {"data":{"project":"$project","stage":"$stage","service":"$service","status":"succeeded","result":"pass"},"source":"cas-quickstart","specversion":"1.0","type":"sh.keptn.event.mytask-interactive.finished","shkeptncontext":"$shkeptncontext","triggeredid":"$id"})
             - echo $my_payload
