--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -20,12 +20,13 @@ pipelines:
             - add_run_variables service=$(read_json payload.json "service")
             - add_run_variables shkeptncontext=$(read_json payload.json "shkeptncontext")
             - add_run_variables idx=$(read_json payload.json "id")
-            - add_run_variables my_payload="$(jq -n --arg pr $project --arg st $stage --arg sv $service --arg sh $shkeptncontext --arg id $idx '{data:{project:$pr,stage:$st,service:$sv,status:"succeeded",result:"pass"},source:"cas-quickstart",specversion:"1.0",type:"sh.keptn.event.mytask-interactive.finished",shkeptncontext:$sh,triggeredid:$id}')"
+            - |
+            add_run_variables my_payload="$(jq -n --arg pr $project --arg st $stage --arg sv $service --arg sh $shkeptncontext --arg id $idx '{data:{project:$pr,stage:$st,service:$sv,status:"succeeded",result:"pass"},source:"cas-quickstart",specversion:"1.0",type:"sh.keptn.event.mytask-interactive.finished",shkeptncontext:$sh,triggeredid:$id}')"
             - echo "$my_payload"
-             - |
-              echo "Step1:"
-              echo "Step2:"
-              echo "Step3:"
+            - |
+            echo "Step1:"
+            echo "Step2:"
+            echo "Step3:"
       - name: step_2
         type: Bash
         configuration:
