--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -22,11 +22,11 @@ pipelines:
             - add_run_variables idx=$(read_json payload.json "id")
             - |
               add_run_variables my_payload="$(jq -n \
-              --arg pr $project \
-              --arg st $stage \
-              --arg sv $service \
-              --arg sh $shkeptncontext \
-              --arg id $idx \
+              --arg pr $(read_json payload.json "project") \
+              --arg st $(read_json payload.json "stage") \
+              --arg sv $(read_json payload.json "service") \
+              --arg sh $(read_json payload.json "shkeptncontext") \
+              --arg id $(read_json payload.json "id") \
               '{data:{project:$pr,stage:$st,service:$sv,status:"succeeded",result:"pass"},source:"cas-quickstart",specversion:"1.0",type:"sh.keptn.event.mytask-interactive.finished",shkeptncontext:$sh,triggeredid:$id}')"
             - echo "$my_payload"
       - name: step_2
