--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -22,13 +22,7 @@ pipelines:
               --arg sv $(read_json payload.json "service") \
               --arg sh $(read_json payload.json "shkeptncontext") \
               --arg id $(read_json payload.json "id") \
-              '{ \
-               data:{project:$pr,stage:$st,service:$sv,status:"succeeded",result:"pass"}, \
-               source:"cas-quickstart", \
-               specversion:"1.0", \
-               type:"sh.keptn.event.mytask-interactive.finished", \
-               shkeptncontext:$sh,triggeredid:$id \
-              }')"
+              '{data:{project:$pr,stage:$st,service:$sv,status:"succeeded",result:"pass"},source:"cas-quickstart",specversion:"1.0",type:"sh.keptn.event.mytask-interactive.finished",shkeptncontext:$sh,triggeredid:$id}')"
             - echo "$my_payload"
       - name: step_2
         type: Bash
