--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -33,4 +33,8 @@ pipelines:
             - name: step_1
         execution:
           onExecute:
-            - 'curl -X POST $int_DynaCred_URL -H "accept: application/json" -H "x-token: int_DynaCred_API_TOKEN" -H "Content-Type: application/json" -d "$my_payload"'
+            - printenv int_DynaCred_URL
+            - echo $int_DynaCred_URL
+            - echo "$int_DynaCred_URL"
+            - printenv int_myCredentials_password
+            - 'curl -X POST "$int_DynaCred_URL" -H "accept: application/json" -H 'x-token: "$int_DynaCred_API_TOKEN"' -H "Content-Type: application/json" -d "$my_payload"'
