--- a/jfrog-quickstart-examples/pipelines.yml
+++ b/jfrog-quickstart-examples/pipelines.yml
@@ -40,7 +40,7 @@ pipelines:
         configuration:
           affinityGroup: slo
           integrations:
-            - name: DynaCred
+            - name: DynaCred2
           inputSteps:
             - name: step_2
         execution:
